I added my name

--- a/Client/index.html
+++ b/Client/index.html
@@ -24,7 +24,7 @@
                 Baber Jan : H00339983 
        </p>
 		<p>
-        	*empty*
+        	Basiq Ahmed : H00309257
 		</p>
 		<p>
 			*empty*
