--- a/Client/index.html
+++ b/Client/index.html
@@ -21,7 +21,7 @@
         	Sarkis Garbis Khorozian H00327324
         </p>
 		<p>
-        	Baber Jan : H00339983 
+        	<b>Baber</b> <i>Jan</i> : <u>H00339983</u> 
        </p>
 		<p>
         	Abdullatif Kaissi : H00288494
