added a smiley face next to my name - abed

--- a/Client/index.html
+++ b/Client/index.html
@@ -24,7 +24,7 @@
         	Baber Jan : H00339983 
        </p>
 		<p>
-        	Abdullatif Kaissi : H00288494
+        	Abdullatif Kaissi :) : H00288494
 		</p>
 		<p>
 			Basiq Ahmed : H00309257
