--- a/Client/index.html
+++ b/Client/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 	<head>
@@ -7,26 +6,21 @@
 		</title>
 	</head>
 
+	<canvas id="myCanvas" width="500" height="500" style = "border:5px solid #000000"></canvas>
+	
 	<script src = "https://cdn.socket.io/socket.io-1.4.5.js"></script>
 
 	<script>
 		var socket = io ();
+		var canvas = document.getElementById ("myCanvas");
+		var ctx = canvas.getContext ("2d");
 
-		var x_axis_position = 0;
-
-		var move = function ( x_input) {
-			socket.emit ('move x', {
-				input: x_input
-			}); 
-		}
-		
-		socket.on ('send position', function (data) {
-			x_axis_position = data.pos;
-			console.log (x_axis_position);
+		socket.on ('newPosition',function (data) {
+			ctx.clearRect (0,0,500,500);
+			
+			for (var i = 0; i < data.length; i++)
+				ctx.fillText ('P',data[i].x, data[i].y);
 		});
-	
 	</script>
-	<button onclick="move(-1)">Left</button>
-	<button onclick="move(1)">Right</button>
 
 </html>
