--- a/Client/index.html
+++ b/Client/index.html
@@ -20,7 +20,7 @@
 			ctx.clearRect (0,0,960,540);
 			
 			for (var i = 0; i < data.length; i++)
-				ctx.fillText ("P",data[i].x, data[i].y);
+				ctx.fillText (player.team,data[i].x, data[i].y);
 		});
 
 
