--- a/Client/index.html
+++ b/Client/index.html
@@ -18,8 +18,8 @@
 		var socket = io ();
 		var canvas = document.getElementById ("myCanvas");
 		var ctx = canvas.getContext ("2d");
-		var current_username = prompt("Please enter your username",);//Creates a prompt and stores the values in current_username.
 		var playerImage = document.getElementById("playerImageAnchor"); //Note: DO NOT remove the style from the image anchor, although useless, it ruins it for some reason?
+		var current_username = prompt("Please enter your username",);//Creates a prompt and stores the values in current_username.
 		ctx.font = "30px Arial";
 
 		socket.on ('newPosition',function (data) //This receives the data on the players movement and renders each and single player
@@ -27,7 +27,7 @@
 			ctx.clearRect (0,0,960,540);
 			for (var i = 0; i < data.length; i++)
 			{
-				ctx.fillText ( current_username,data[i].x, data[i].y);
+				ctx.fillText ( "Player Name",data[i].x, data[i].y);
 				ctx.drawImage ( playerImage, data[i].x , data[i].y );
 			}
 		});
