Done with mousePosition implementation

--- a/Client/index.html
+++ b/Client/index.html
@@ -110,10 +110,23 @@
 			}	
 		}
 
+		function mousePosition(event){
+			var positionX = event.clientX;
+			var positionY = event.clientY;
+			var positionOfMouse = "x: " + positionX + "y: " + positionY;
+		}
+
+		function sendMousePositon () { //This function sends the mouse position data to the server via socket.
+			 socket.emit("sendMousePosition", {
+                   mousePosition
+			 });
+		}
+
         
         
 		document.onkeydown = movePress;
 		document.onkeyup = moveLift;
+		document.onmousemove = mousePosition;
 	</script>
 
 </html>
