--- a/Client/index.html
+++ b/Client/index.html
@@ -41,9 +41,10 @@
 				ctx.fillStyle = "#000000" ;
 				ctx.fillText ( data[i].name, data[i].x - 80, data[i].y - 100);
 				ctx.fillStyle = "#FF0000" ;
-				ctx.fillRect ( data[i].x - 80, data[i].y - 90, 100, 5 ); //place-holder values 300 and 250 used since idk how to send current health and max health
+				ctx.fillRect ( data[i].x - 80, data[i].y - 90, 100, 5 ); 
 				ctx.fillStyle = "#00FF00" ;
-				ctx.fillRect ( data[i].x - 80, data[i].y - 90, (data[i].currentHealth/data[i].maxHealth) * 100, 5 ); //current health -50 because there is no way to lose hp right now in the game
+				ctx.fillRect ( data[i].x - 80, data[i].y - 90, (data[i].currentHealth/data[i].maxHealth) * 100, 5 );
+				ctx.fillStyle = "#000000" ;
 				ctx.drawImage ( playerImage, data[i].x - 80, data[i].y - 80, 160, 160);
 			}
 		});
