--- a/Client/index.html
+++ b/Client/index.html
@@ -148,6 +148,7 @@
 		document.onkeyup = moveLift;
 		document.onmouseup = clickLifted;
 		document.onmousedown = attackDown;
+		document.onmousemove = mousePosition;
 
 	</script>
 
