--- a/Client/index.html
+++ b/Client/index.html
@@ -146,11 +146,9 @@
 		function mousePosition(event){
 			var positionX = event.clientX;
 			var positionY = event.clientY;
-			var positionOfMouse = "x: " + positionX + "y: " + positionY;
-		}
-		function sendMousePositon () { //This function sends the mouse position data to the server via socket.
-			 socket.emit("sendMousePosition", {
-                   mousePosition
+			socket.emit("sendMousePosition", {
+                   		x: positionsX,
+				y: positionsY
 			 });
 		}
 
